--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
       <div class="text-center">
         <p class="display-4">Counter Program</p>
       </div>
+      
+      <form action="" class="row justify-content-center align-item-center">
+        
+        <div class="col-4">
+          <button type="button" class="btn btn-outline-primary" id="increase">Increase</button>
+        </div>
+      </form>
     </div>
   </section>
 
