--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <form action="" class="row justify-content-center align-item-center">
         
         <div class="text-center">
-          <p class="display-3">0</p>
+          <p class="display-3" id="number">0</p>
         </div>
         
         <div class="row text-center">
@@ -45,6 +45,8 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+<script src="main.js"></script>
 </body>
 
 </html>
