--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   
   <section>
-    <div class="container-md">
+    <div class="container-md my-5">
       <div class="text-center">
         <p class="display-4">Counter Program</p>
       </div>
