--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         
         <div class="col-4">
-          <button type="button" class="btn btn-outline-primary" id="decrease">Decrease</button>
+          <button type="button" class="btn btn-outline-primary btn-lgg" id="decrease">Decrease</button>
         </div>
        </div>
       </form>
