--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         </div>
         
         <div class="col-4">
-          <button type="button" class="btn btn-outline-primary" id="reset">Reset</button>
+          <button type="button" class="btn btn-outline-primary btn-lg" id="reset">Reset</button>
         </div>
         
         <div class="col-4">
-          <button type="button" class="btn btn-outline-primary btn-lgg" id="decrease">Decrease</button>
+          <button type="button" class="btn btn-outline-primary btn-lg" id="decrease">Decrease</button>
         </div>
        </div>
       </form>
