--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         
         <div class="col-4">
-          <button type="button" class="btn btn-outline-primary btn-lg" id="reset">Reset</button>
+          <button type="button" class="btn btn-outline-success btn-lg" id="reset">Reset</button>
         </div>
         
         <div class="col-4">
